Removed scrolling animation

--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -35,7 +35,7 @@
         </div>
 
         <!--Business Permit Steps Panel-->
-        <div class="business-permit-steps fade-in">
+        <div class="business-permit-steps">
             <h2>Need a <span class="red-highlight">Business Permit</span>?</h2>
 
             <div class="steps-wrapper">
@@ -73,7 +73,7 @@
         </div>
 
         <!--Business Permit Table Panel-->
-        <div class="business-permit-table fade-in">
+        <div class="business-permit-table">
             <br><br>
             <h1 style="text-align: center;">Barangay Clearance</h1>
             <table id="permitTable">
@@ -122,11 +122,10 @@
         </div>
 
         <!--Job Opportunities Panel-->
-        <div class="jobs-section fade-in">
+        <div class="jobs-section">
                 <div class="job-title-row">
                     <h2><span class="red-highlight">Job</span> Opportunities</h2>
-                    <p class="job-subtitle">Looking for a job? Check out the available job opportunities in Barangay Tagapo.</p>
-                    <div class="job-title-underline"></div>
+                    <p class="job-subtitle">Looking for a job? Check out the available job opportunities in Laguna.</p>
                 </div>
                 
                 <div class="job-panel">
