Changed table header to Business Categories

--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -84,7 +84,7 @@
                 <table id="permitTable">
                     
                     <tr>
-                        <th>For the issuance of Business Permit</th>
+                        <th>Business Categories</th>
                         <th>Price   </th>
                     </tr>
                     <tbody id="tableBody">
