--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Barangay Tagapo Livelihood Page</title>
         
+        <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
         <link rel="stylesheet" href="/Stylesheets/livelihoodDashboardStyle.css" />
         <link rel="stylesheet" href="/Stylesheets/livelihoodWebsiteBannerStyle.css" />
         <link rel="stylesheet" href="/Stylesheets/businessPermitStepsStyle.css" />
@@ -24,14 +27,10 @@
         </header>
 
         <!--Website Banner-->
-        <div class="web-banner">
-            <h1>Barangay Tagapo</h1>
-            <h1><span class="red-highlight">Livelihood</span> Page</h1>
-            <p>Livelihood in Tagapo: Business Permits and Job Opportunities</p>
-
-            <div class="contact-btn">
-                <a href="#">Contact Us →</a>
-            </div>
+       <div class="web-banner">
+            <h1 class="title">Barangay Tagapo<br /> <span>Livelihood</span> Page</h1>
+            <p class="desc">Livelihood in Tagapo: Business Permits and Job Opportunities</p>
+            <a href="#" class="solid-button">Contact Us</a>
         </div>
 
         <!--Business Permit Steps Panel-->
@@ -68,7 +67,7 @@
             <span class="permit-note"><p><i>You can check the tables below for the prices of permits.</i></p></span>
 
             <div class="apply-btn">
-                <a href="#">Apply Now →</a>
+                <a href="#">Apply Here →</a>
             </div>
         </div>
 
@@ -305,7 +304,7 @@
                         </div>
 
                         <div class="iframe-container">
-                            <iframe id="jobIframe" src="/Pages/SelectJob.html" width="450" height="955" style="border:0;">
+                            <iframe id="jobIframe" src="/Pages/SelectJob.html" width="500" height="1130" style="border:0;">
                             None
                             </iframe>
                         </div>
