--- a/livelihoodDashboard.html
+++ b/livelihoodDashboard.html
@@ -16,7 +16,6 @@
         <link rel="stylesheet" href="/Stylesheets/jobDetailsStyle.css" />
         <link rel="stylesheet" href="/Stylesheets/buttonPagination.css" />
         <script src="/Javascript/jobIframe.js" defer></script>
-        <script src="/Javascript/scrollingAnimation.js" defer></script>
         <script src="/Javascript/tablePagination.js"></script>
     </head>
 
@@ -38,31 +37,36 @@
             <h2>Need a <span class="red-highlight">Business Permit</span>?</h2>
 
             <div class="steps-wrapper">
-                <div class="steps">
-                    <h3>Requirements</h3>
-
-                    <p><b>Small/Local Businesses:</b> Secure DTI registration before going to the barangay.</p>
-                    <p><b>Businesses in Malls:</b> Secure both DTI registration and lease contract before going to the barangay.</p>
+                <div class="step-item">
+                    <div class="step-circle"></div>
+                    <div class="steps">
+                        <h3>Requirements</h3>
+                        <p><b>Small/Local Businesses:</b> Secure DTI registration before going to the barangay.</p>
+                        <p><b>Businesses in Malls:</b> Secure both DTI registration and lease contract before going to the barangay.</p>
+                    </div>
                 </div>
 
-                <div class="steps">
-                    <div class="connector-line-top"></div>
-                    <h3>Business Permit Application</h3>
-
-                    <p><b>Walk-in:</b> Proceed to the information desk for assistance. You are required to fill up a form for the processing of your Business Permit.</p>
-                    <p><b>Online:</b> Click the button below for online application.</p>
-                    <div class="connector-line-bottom"></div>
-
+                <div class="step-item">
+                    <div class="step-circle"></div>
+                    <div class="steps">
+                        <div class="connector-line-top"></div>
+                        <h3>Business Permit Application</h3>
+                        <p><b>Walk-in:</b> Proceed to the information desk for assistance. You are required to fill up a form for the processing of your Business Permit.</p>
+                        <p><b>Online:</b> Click the button below for online application.</p>
+                        <div class="connector-line-bottom"></div>
+                    </div>
                 </div>
 
-                <div class="steps">
-                    <h3>Claim Business Permit</h3>
-
-                    <p><b>Walk-in:</b> After filling up necessary information, processing and claiming of documents are done the same day.</p>
-                    <p><b>Online:</b> Visit the barangay office to claim your documents.</p>
+                <div class="step-item">
+                    <div class="step-circle"></div>
+                    <div class="steps">
+                        <h3>Claim Business Permit</h3>
+                        <p><b>Walk-in:</b> After filling up necessary information, processing and claiming of documents are done the same day.</p>
+                        <p><b>Online:</b> Visit the barangay office to claim your documents.</p>
+                    </div>
                 </div>
-
             </div>
+
 
             <span class="permit-note"><p><i>You can check the tables below for the prices of permits.</i></p></span>
 
@@ -75,10 +79,13 @@
         <div class="container">
             <div class="business-permit-table">
                 <div class="image">
-                <img src="/Images/BusinessPermitBanner.png"></div>
+                    <img src="/Images/BusinessPermitBanner.png">
+                </div>
+
                 <br>
+
                 <h1>FOR THE ISSUANCE OF BUSINESS PERMIT</h1>
-                <h1><span class="green">30 AVAILABLE</span> PERMITS</h1>
+                <h2><span class="green">30 AVAILABLE</span> PERMITS</h2>
 
                 <table id="permitTable">
                     
@@ -86,6 +93,7 @@
                         <th>Business Categories</th>
                         <th>Price   </th>
                     </tr>
+
                     <tbody id="tableBody">
                         <tr><td><strong>a.</strong> Accounting Services Firm</td><td>Php 500.00</td></tr>
                         <tr><td><strong>b.</strong> Barbershops / Beauty Shops / Salon and Spa</td><td>Php 300.00</td></tr>
@@ -119,15 +127,15 @@
                         <tr><td><strong>dd.</strong> Corporations / Factories / Manufacturing Firms / Other businesses not mentioned</td><td>Php 1000.00</td></tr>
                     </tbody>
                 </table>
-                <div class="paginationTable">
-                <p id="count">Showing 1 of 3 Pages</p>
-                <div class="pagination-buttons">
-                    <button class="pageTable">1</button>
-                    <button class="pageTable">2</button>
-                    <button class="pageTable">3</button>
-                </div>
-</div>
 
+                <div class="paginationTable">
+                    <p id="count">Showing 1 of 3 Pages</p>
+                    <div class="pagination-buttons">
+                        <button class="pageTable">1</button>
+                        <button class="pageTable">2</button>
+                        <button class="pageTable">3</button>
+                    </div>
+                </div>
             </div>
         </div>
         
