--- a/Pages/nyk.html
+++ b/Pages/nyk.html
@@ -32,6 +32,7 @@
 
         <h2>Benefits</h2>
         <h3>Upon Employment</h3>
+        <div class="qualification">
         <ul>
             <li>Free Uniform</li>
             <li>OT Meal Allowance</li>
@@ -44,6 +45,7 @@
             <li>Performance Incentives</li>
             <li>HMO Coverage (plus 1 dependent)</li>
         </ul>
+        </div>
 
         <p>Interested applicants may contact us via email or phone for more details or to submit their resume.</p>
     </div>
