--- a/Pages/strose.html
+++ b/Pages/strose.html
@@ -43,18 +43,20 @@
         </table><br>
 
         <h2>Qualifications</h2>
+        <div class="qualification">
         <ul>
             <li>Male/Female </li>
             <li>With or without experience </li>
             <li>Atleast High school Graduate </li>
-            <li>Atleast College Level "for tellers & inspectors </li>
-            <li>With Driver's License (1,2,3 restriction code) *for drivers </li>
-            <li>With or without Conductors License "for conductors </li>
-            <li>ith experience *for Bus Mechanic, Bus Electricians, and Aircon Tech position </li>
-            <li>With or without experience "for Tire Man and Upholstery Man </li>
+            <li>Atleast College Level <span class="redtext">"for tellers & inspectors</span> </li>
+            <li>With Driver's License (1,2,3 restriction code) <span class="redtext">*for drivers</span> </li> 
+            <li>With or without Conductors License <span class="redtext">"for conductors</span> </li>
+            <li>ith experience <span class="redtext">*for Bus Mechanic, Bus Electricians, and Aircon Tech positio</span> </li>
+            <li>With or without experience <span class="redtext">"for Tire Man and Upholstery Man</span> </li>
             <li>Willing to undergo training with pay</li>
             <li>With good and pleasant attitude</li>
         </ul>
+        </div>
 
     </div>
 </body>
