Updated Fonts and Job Opp. Section

--- a/livelihoodDashboard.html
+++ b/livelihoodDashboard.html
@@ -22,7 +22,7 @@
     <body>
         <header>
             <!--Insert Header code here-->
-            <h1>THIS IS A DUMMY HEADER</h1>
+            <h1>Header</h1>
         </header>
 
         <!--Website Banner-->
@@ -214,7 +214,7 @@
                                 </div>
 
                                 <div class="button">
-                                    <button class="read-btn" data-url="/Pages/antonina.html">Read More</button>
+                                    <button class="read-btn" data-url="/Pages/SelectJob.html">Read More</button>
                                 </div>
                             </div>
 
@@ -230,7 +230,7 @@
                                 </div>
 
                                 <div class="button">
-                                    <button class="read-btn" data-url="/Pages/nyk.html">Read More</button>
+                                    <button class="read-btn" data-url="/Pages/SelectJob.html">Read More</button>
                                 </div>
                             </div>
 
@@ -246,7 +246,7 @@
                                 </div>
 
                                 <div class="button">
-                                    <button class="read-btn" data-url="/Pages/strose.html">Read More</button>
+                                    <button class="read-btn" data-url="/Pages/SelectJob.html">Read More</button>
                                 </div>
                             </div>
                         </div>
@@ -265,7 +265,7 @@
                                 </div>
 
                                 <div class="button">
-                                    <button class="read-btn" data-url="/Pages/antonina.html">Read More</button>
+                                    <button class="read-btn" data-url="/Pages/SelectJob.html">Read More</button>
                                 </div>
                             </div>
 
@@ -281,7 +281,7 @@
                                 </div>
 
                                 <div class="button">
-                                    <button class="read-btn" data-url="/Pages/nyk.html">Read More</button>
+                                    <button class="read-btn" data-url="/Pages/SelectJob.html">Read More</button>
                                 </div>
                             </div>
 
@@ -297,7 +297,7 @@
                                 </div>
 
                                 <div class="button">
-                                    <button class="read-btn" data-url="/Pages/strose.html">Read More</button>
+                                    <button class="read-btn" data-url="/Pages/SelectJob.html">Read More</button>
                                 </div>
                             </div>
                         </div>
@@ -320,7 +320,7 @@
         </div>
 
         <footer>
-            <h1>THIS IS A DUMMY FOOTER</h1>
+            <h1>Footer</h1>
             <!--Insert Footer here-->
         </footer>
     </body>
