Updated Connector Lines

--- a/livelihoodDashboard.html
+++ b/livelihoodDashboard.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="/Stylesheets/jobDetailsStyle.css" />
         <link rel="stylesheet" href="/Stylesheets/buttonPagination.css" />
         <script src="/Javascript/jobIframe.js" defer></script>
-        <script src="/Javascript/tablePagination.js"></script>
+        <script src="/Javascript/tablePagination.js" defer></script>
     </head>
 
     <body>
@@ -48,13 +48,13 @@
 
                 <div class="step-item">
                     <div class="step-circle"></div>
+                    <div class="connector-line-top"></div>
                     <div class="steps">
-                        <div class="connector-line-top"></div>
                         <h3>Business Permit Application</h3>
                         <p><b>Walk-in:</b> Proceed to the information desk for assistance. You are required to fill up a form for the processing of your Business Permit.</p>
                         <p><b>Online:</b> Click the button below for online application.</p>
-                        <div class="connector-line-bottom"></div>
                     </div>
+                    <div class="connector-line-bottom"></div>
                 </div>
 
                 <div class="step-item">
