--- a/livelihoodDashboard.html
+++ b/livelihoodDashboard.html
@@ -85,7 +85,7 @@
                 <br>
 
                 <h1>FOR THE ISSUANCE OF BUSINESS PERMIT</h1>
-                <h2><span class="green">30 AVAILABLE</span> PERMITS</h2>
+                <h2><span class="green">30 Available</span> Permits</h2>
 
                 <table id="permitTable">
                     
