Updated Business Permit Steps

--- a/livelihoodDashboard.html
+++ b/livelihoodDashboard.html
@@ -41,8 +41,8 @@
                     <div class="step-circle"></div>
                     <div class="steps">
                         <h3>Requirements</h3>
-                        <p><b>Small/Local Businesses:</b> Secure DTI registration before going to the barangay.</p>
-                        <p><b>Businesses in Malls:</b> Secure both DTI registration and lease contract before going to the barangay.</p>
+                        <p><b>Small/Local Businesses:</b> Secure <b class="red-highlight"><acronym title="Department of Trade and Industry">DTI Registration</acronym></b> before going to the barangay.</p>
+                        <p><b>Businesses in Malls:</b> Secure both <b class="red-highlight"><acronym title="Department of Trade and Industry">DTI Registration</acronym></b> and <b class="red-highlight">Lease Contract</b> before going to the barangay.</p>
                     </div>
                 </div>
 
@@ -51,8 +51,11 @@
                     <div class="connector-line-top"></div>
                     <div class="steps">
                         <h3>Business Permit Application</h3>
-                        <p><b>Walk-in:</b> Proceed to the information desk for assistance. You are required to fill up a form for the processing of your Business Permit.</p>
-                        <p><b>Online:</b> Click the button below for online application.</p>
+                        <ul>
+                            <li>Visit the <b class="red-highlight">Barangay Office</b> and proceed to the <b class="red-highlight">Information Desk</b> for guidance.</u>
+                            <li>Submit all necessary documents.</li>
+                            <li>Complete the <b class="red-highlight">Order of Payment Form for Barangay Clearance</b>, which will be provided by the staff.</li>
+                        </ul>
                     </div>
                     <div class="connector-line-bottom"></div>
                 </div>
@@ -61,18 +64,15 @@
                     <div class="step-circle"></div>
                     <div class="steps">
                         <h3>Claim Business Permit</h3>
-                        <p><b>Walk-in:</b> After filling up necessary information, processing and claiming of documents are done the same day.</p>
-                        <p><b>Online:</b> Visit the barangay office to claim your documents.</p>
+                        <ul>
+                            <li>You may claim the business permit within the same day of application. Processing the permit may take a few minutes.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
 
 
             <span class="permit-note"><p><i>You can check the tables below for the prices of permits.</i></p></span>
-
-            <div class="apply-btn">
-                <a href="#">Apply Here →</a>
-            </div>
         </div>
 
         <!--Business Permit Table Panel-->
