Added Relative File Path

--- a/Pages/antonina.html
+++ b/Pages/antonina.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Antonina Industrial Corporation</title>
-    <link rel="stylesheet" href="/Stylesheets/jobDetailsStyle.css" />
+    <link rel="stylesheet" href="../Stylesheets/jobDetailsStyle.css" />
 </head>
 <body>
     <div class="pageStyle">
         <div>
-            <img src="/Images/antonina-logo.jpg" alt="Logo">
+            <img src="../Images/antonina-logo.jpg" alt="Logo">
         </div> <br>
         <div class="contact-info">
-            <div><img src="/Images/location-icon.png" class="icon" alt="Location icon">Baynosa Compound, Rizal Blvd., Brgy. Malusak, Santa Rosa, Laguna</div>
-            <div><img src="/Images/email-icon.png" class="icon" alt="Email icon">antonina.hrasst@gmail.com</div>
-            <div><img src="/Images/phone-icon.png" class="icon" alt="Phone icon">09175910382</div>
+            <div><img src="../Images/location-icon.png" class="icon" alt="Location icon">Baynosa Compound, Rizal Blvd., Brgy. Malusak, Santa Rosa, Laguna</div>
+            <div><img src="../Images/email-icon.png" class="icon" alt="Email icon">antonina.hrasst@gmail.com</div>
+            <div><img src="../Images/phone-icon.png" class="icon" alt="Phone icon">09175910382</div>
         </div><br>
         <h2>Vacant Positions</h2>
         <ul>
