--- a/Pages/strose.html
+++ b/Pages/strose.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Saint Rose Transit Inc.</title>
-    <link rel="stylesheet" href="/Stylesheets/jobDetailsStyle.css" />
+    <link rel="stylesheet" href="../Stylesheets/jobDetailsStyle.css" />
 </head>
 <body>
     <div class="pageStyle">
         <div>
-            <img src="/Images/strose-logo.png" alt="Logo">
+            <img src="../Images/strose-logo.png" alt="Logo">
         </div> <br>
         <div class="contact-info">
-            <div><img src="/Images/location-icon.png" class="icon" alt="Location icon">Km 35 National Hi-Way, Brgy. Canlalay, Biñan City, Laguna</div>
-            <div><img src="/Images/email-icon.png" class="icon" alt="Email icon">saintrosetransit.hre@gmail.com</div>
-            <div><img src="/Images/phone-icon.png" class="icon" alt="Phone icon">(02)8710-6331 / 09209787784</div>
-            <div><img src="/Images/phone-icon.png" class="icon" alt="Phone icon">(049)513-3067 / 09098224007</div>
+            <div><img src="../Images/location-icon.png" class="icon" alt="Location icon">Km 35 National Hi-Way, Brgy. Canlalay, Biñan City, Laguna</div>
+            <div><img src="../Images/email-icon.png" class="icon" alt="Email icon">saintrosetransit.hre@gmail.com</div>
+            <div><img src="../Images/phone-icon.png" class="icon" alt="Phone icon">(02)8710-6331 / 09209787784</div>
+            <div><img src="../Images/phone-icon.png" class="icon" alt="Phone icon">(049)513-3067 / 09098224007</div>
         </div><br>
 
         <h2>Vacant Positions</h2>
