--- a/Pages/SelectJob.html
+++ b/Pages/SelectJob.html
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-    <img src="/Images/SelectJob.png" alt="Select Job">
+    <img src="../Images/SelectJob.png" alt="Select Job">
 </body>
 </html>
