--- a/Pages/nyk.html
+++ b/Pages/nyk.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>NYK TDG Philippines Inc. - Job Hiring</title>
-    <link rel="stylesheet" href="/Stylesheets/jobDetailsStyle.css" />
+    <link rel="stylesheet" href="../Stylesheets/jobDetailsStyle.css" />
 </head>
 <body>
     <div class="pageStyle">
         <div>
-            <img src="/Images/nyk-logo.png" alt="NYK Logo">
+            <img src="../Images/nyk-logo.png" alt="NYK Logo">
         </div><br>
 
         <div class="contact-info">
-             <div><img src="/Images/location-icon.png" class="icon" alt="Location icon">Bacnotan Drive, Barangay Real, Calamba City, Laguna</div>
-            <div><img src="/Images/email-icon.png" class="icon" alt="Email icon">marjulyn.aleta@nykgroup.com | joy.rimando@nykgroup.com</div>
-            <div><img src="/Images/phone-icon.png" class="icon" alt="Phone icon">049-545-9527 | 0917-153-6638 | 0917-556-7594</div>
+             <div><img src="../Images/location-icon.png" class="icon" alt="Location icon">Bacnotan Drive, Barangay Real, Calamba City, Laguna</div>
+            <div><img src="../Images/email-icon.png" class="icon" alt="Email icon">marjulyn.aleta@nykgroup.com | joy.rimando@nykgroup.com</div>
+            <div><img src="../Images/phone-icon.png" class="icon" alt="Phone icon">049-545-9527 | 0917-153-6638 | 0917-556-7594</div>
         </div><br>
 
         <h2>Vacant Position</h2>
