Added Header Footer | Added Relative FilePath | Added Tagapo Logo

--- a/livelihoodDashboard.html
+++ b/livelihoodDashboard.html
@@ -16,15 +16,16 @@
     <link rel="stylesheet" href="./Stylesheets/jobOpportunitiesStyle.css" />
     <link rel="stylesheet" href="./Stylesheets/jobDetailsStyle.css" />
     <link rel="stylesheet" href="./Stylesheets/buttonPagination.css" />
-    <link rel="stylesheet" href="./Stylesheets/headerFooter.css"/>
     <script src="./Javascript/jobIframe.js" defer></script>
     <script src="./Javascript/tablePagination.js" defer></script>
+    <script src="./Javascript/webScript.js" defer></script>
 </head>
 
 <body>
     <!-- header -->
+
     <header class="hidden" id="header">
-        <div class="container" id="headerContainer">
+        <div class="wrapper" id="headerContainer">
             <div class="logo-text">
                 <a href="/"><img src="./images/tagapo-logo.png" alt="barangay tagapo logo image" class="logo-image">
                     <div>
@@ -42,10 +43,10 @@
                 </svg>
 
                 <ul>
-                    <li><a href="index.html" class="active">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="health.html">HEALTH</a></li>
                     <li><a href="security.html">SECURITY</a></li>
-                    <li><a href="business.html">BUSINESS</a></li>
+                    <li><a href="business.html" class="active">LIVELIHOOD</a></li>
                     <li><a href="sk.html">SK</a></li>
                     <li><a href="environment.html">ENVIRONMENT</a></li>
                 </ul>
@@ -66,7 +67,6 @@
             </svg>
         </div>
     </header>
-
 
     <!--Website Banner-->
     <div class="web-banner">
@@ -288,6 +288,7 @@
         <div class="job-title-row">
             <h2><span class="red-highlight">Job</span> Opportunities</h2>
             <p class="job-subtitle">Looking for a job? Check out the available job opportunities in Laguna.</p>
+            <hr>
         </div>
 
         <div class="job-panel">
@@ -464,8 +465,32 @@
     </div>
 
     <footer>
-        <h1>Footer</h1>
-        <!--Insert Footer here-->
+        <div class="wrapper">
+            <div class="logo-text">
+                <img src="./images/tagapo-logo.png" alt="barangay tagapo logo image">
+                <p>© <span id="currentYearElement"></span> All rights reserved. <span class="name">Barangay Tagapo, Sta.
+                        Rosa,
+                        Laguna</span>
+                </p>
+            </div>
+            <div class="location-group">
+                <div class="address">
+                    <p>MAP AND LOCATION</p>
+                    <p>
+                        <svg width="14" height="20" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M7 20C6.76667 20 6.56667 19.9333 6.4 19.8C6.23333 19.6667 6.10833 19.4917 6.025 19.275C5.70833 18.3417 5.30833 17.4667 4.825 16.65C4.35833 15.8333 3.7 14.875 2.85 13.775C2 12.675 1.30833 11.625 0.775 10.625C0.258333 9.625 0 8.41667 0 7C0 5.05 0.675 3.4 2.025 2.05C3.39167 0.683333 5.05 0 7 0C8.95 0 10.6 0.683333 11.95 2.05C13.3167 3.4 14 5.05 14 7C14 8.51667 13.7083 9.78333 13.125 10.8C12.5583 11.8 11.9 12.7917 11.15 13.775C10.25 14.975 9.56667 15.975 9.1 16.775C8.65 17.5583 8.275 18.3917 7.975 19.275C7.89167 19.5083 7.75833 19.6917 7.575 19.825C7.40833 19.9417 7.21667 20 7 20ZM7 9.5C7.7 9.5 8.29167 9.25833 8.775 8.775C9.25833 8.29167 9.5 7.7 9.5 7C9.5 6.3 9.25833 5.70833 8.775 5.225C8.29167 4.74167 7.7 4.5 7 4.5C6.3 4.5 5.70833 4.74167 5.225 5.225C4.74167 5.70833 4.5 6.3 4.5 7C4.5 7.7 4.74167 8.29167 5.225 8.775C5.70833 9.25833 6.3 9.5 7 9.5Z"
+                                fill="white" />
+                        </svg>
+                        129 Rizal Blvd, Brgy. Tagapo, Santa Rosa, 4026 Laguna
+                    </p>
+                </div>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9251.821258417178!2d121.09870411089376!3d14.321204752693305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397d9ced32d9719%3A0x45e7aab820391865!2sTagapo%2C%20City%20of%20Santa%20Rosa%2C%20Laguna!5e1!3m2!1sen!2sph!4v1748681749375!5m2!1sen!2sph"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
     </footer>
 </body>
 
