--- a/Pages/antonina.html
+++ b/Pages/antonina.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="pageStyle">
-        <div>
+        <div class="image-container">
             <img src="../Images/antonina-logo.jpg" alt="Logo">
         </div> <br>
         <div class="contact-info">
@@ -25,14 +25,14 @@
         </ul> <br>
         <p>Please bring the following requirements during interview:</p>
         <h2>Requirements</h2>
-        <ul>
-            <li>Birth Certificate</li>
-            <li>NBI Clearance</li>
-            <li>Police Clearance</li>
-            <li>Barangay Clearance</li>
-            <li>Diploma</li>
-            <li>TOR or Report Card</li>
-            <li>SSS, PAG-IBIG, TIN & PHILHEALTH</li>
+        <ul class="requirements">
+            <li> Birth Certificate</li>
+            <li> NBI Clearance</li>
+            <li> Police Clearance</li>
+            <li> Barangay Clearance</li>
+            <li> Diploma</li>
+            <li> TOR or Report Card</li>
+            <li> SSS, PAG-IBIG, TIN & PHILHEALTH</li>
         </ul>
         <p>Interested applicants may submit their resume thorugh our email or contact number.</p>
         <br>
