--- a/Pages/nyk.html
+++ b/Pages/nyk.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="pageStyle">
-        <div>
+        <div class="image-container">
             <img src="../Images/nyk-logo.png" alt="NYK Logo">
         </div><br>
 
@@ -23,7 +23,7 @@
         </ul><br>
 
         <h2>Requirements</h2>
-        <ul>
+        <ul class="requirements">
             <li>Graduate of Automotive course or any related technical course</li>
             <li>Fresh Graduate / College Level / Vocational Graduate / TESDA Graduate</li>
             <li>Knows how to drive 4-wheels and must have a driver's license</li>
@@ -31,23 +31,23 @@
         </ul><br>
 
         <h2>Benefits</h2>
-        <h3>Upon Employment</h3>
         <div class="qualification">
-        <ul>
-            <li>Free Uniform</li>
-            <li>OT Meal Allowance</li>
-            <li>Accident Insurance</li>
-        </ul>
-        <h3>Upon Regularization</h3>
-        <ul>
-            <li>Leave Credits</li>
-            <li>Group Life Insurance</li>
-            <li>Performance Incentives</li>
-            <li>HMO Coverage (plus 1 dependent)</li>
-        </ul>
+            <h3>Upon Employment</h3>
+            <ul>
+                <li>Free Uniform</li>
+                <li>OT Meal Allowance</li>
+                <li>Accident Insurance</li>
+            </ul>
+            <h3>Upon Regularization</h3>
+            <ul>
+                <li>Leave Credits</li>
+                <li>Group Life Insurance</li>
+                <li>Performance Incentives</li>
+                <li>HMO Coverage (plus 1 dependent)</li>
+            </ul>
         </div>
 
-        <p>Interested applicants may contact us via email or phone for more details or to submit their resume.</p>
+        <p><i>Interested applicants may contact us via email or phone for more details or to submit their resume.</i></p>
     </div>
 </body>
 </html>
