--- a/Pages/strose.html
+++ b/Pages/strose.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="pageStyle">
-        <div>
+        <div class="image-container">
             <img src="../Images/strose-logo.png" alt="Logo">
         </div> <br>
         <div class="contact-info">
