--- a/livelihoodDashboard.html
+++ b/livelihoodDashboard.html
@@ -22,8 +22,8 @@
 </head>
 
 <body>
+    
     <!-- header -->
-
     <header class="hidden" id="header">
         <div class="wrapper" id="headerContainer">
             <div class="logo-text">
@@ -282,7 +282,6 @@
         </div>
     </div>
 
-
     <!--Job Opportunities Panel-->
     <div class="jobs-section">
         <div class="job-title-row">
@@ -450,7 +449,7 @@
                     <button class="page-button" data-page="1">1</button>
                     <button class="page-button" data-page="2">2</button>
                     <button class="page-button" data-page="3">3</button>
-                    <button class="page-button next">Next</button>
+                    <button class="page-button-next">Next</button>
                 </div>
 
             </div>
