--- a/livelihood.html
+++ b/livelihood.html
@@ -44,11 +44,11 @@
 
                 <ul>
                     <li><a href="../landing/index.html">HOME</a></li>
-                    <li><a href="../health/index.html">HEALTH</a></li>
-                    <li><a href="../security/securityDashboard.HTML">SECURITY</a></li>
-                    <li><a href="../livelihood/livelihoodDashboard.html" class="active">LIVELIHOOD</a></li>
-                    <li><a href="../sk/SKTagapo.html">SK</a></li>
-                    <li><a href="../environment/Environment.html">ENVIRONMENT</a></li>
+                    <li><a href="../health/health.html">HEALTH</a></li>
+                    <li><a href="../security/security.HTML">SECURITY</a></li>
+                    <li><a href="../livelihood/livelihood.html" class="active">LIVELIHOOD</a></li>
+                    <li><a href="../sk/sk.html">SK</a></li>
+                    <li><a href="../environment/environment.html">ENVIRONMENT</a></li>
                 </ul>
             </nav>
 
