--- a/livelihood.html
+++ b/livelihood.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barangay Tagapo Livelihood Page</title>
-
+    <link rel="icon" href="./images/tagapo-logo.png" />
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
@@ -22,12 +22,12 @@
 </head>
 
 <body>
-    
+
     <!-- header -->
     <header class="hidden" id="header">
         <div class="wrapper" id="headerContainer">
             <div class="logo-text">
-                <a href="/"><img src="./images/tagapo-logo.png" alt="barangay tagapo logo image" class="logo-image">
+                <a href="/"><img src="./Images/tagapo-logo.png" alt="barangay tagapo logo image" class="logo-image" />
                     <div>
                         <p>City of Sta. Rosa</p>
                         <h2>BARANGAY TAGAPO</h2>
@@ -43,11 +43,11 @@
                 </svg>
 
                 <ul>
-                    <li><a href="../landing/index.html">HOME</a></li>
-                    <li><a href="../health/index.html">HEALTH</a></li>
-                    <li><a href="../security/securityDashboard.HTML">SECURITY</a></li>
-                    <li><a href="../livelihood/livelihoodDashboard.html" class="active">LIVELIHOOD</a></li>
-                    <li><a href="../sk/SKTagapo.html">SK</a></li>
+                    <li><a href="../../index.html">HOME</a></li>
+                    <li><a href="../health/health.html">HEALTH</a></li>
+                    <li><a href="../security/security.HTML">SECURITY</a></li>
+                    <li><a href="../livelihood/livelihood.html" class="active">LIVELIHOOD</a></li>
+                    <li><a href="../sk/sk.html">SK</a></li>
                     <li><a href="../environment/Environment.html">ENVIRONMENT</a></li>
                 </ul>
             </nav>
